--- a/MyMovies/MyMovies/Views/Users/EditUser.cshtml
+++ b/MyMovies/MyMovies/Views/Users/EditUser.cshtml
@@ -14,6 +14,7 @@
 
 <div class="form-container">
     <form asp-controller="Users" asp-action="EditUser" method="post">
+        <div asp-validation-summary="ModelOnly" class="text-danger"></div>
         <input type="hidden" asp-for="Id" />
         <div class="form-group">
             <label asp-for="Username" class="control-label"></label>
