minor fix with css

--- a/MyMovies/MyMovies/Views/Movies/Create.cshtml
+++ b/MyMovies/MyMovies/Views/Movies/Create.cshtml
@@ -7,7 +7,7 @@
     ViewBag.Title = "Create";
 }
 
-<style>
+@*<style>
 
     .form-container {
         width: 35%;
@@ -26,7 +26,7 @@
         width: 35%;
         margin-top: 4%;
     }
-</style>
+</style>*@
 
 
 <div class="createMovieHeader">
