--- a/MyMovies/MyMovies/Views/Shared/_Layout.cshtml
+++ b/MyMovies/MyMovies/Views/Shared/_Layout.cshtml
@@ -20,182 +20,8 @@
     <link href="~/lib/bootstrap/dist/css/bootstrap.css" rel="stylesheet" />
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css" integrity="sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ" crossorigin="anonymous">
     <link href="~/css/site.css" rel="stylesheet" />
+    <link href="~/css/styles.css" rel="stylesheet" type="text/css" />
 
-    <style>
-
-        * {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-        }
-
-
-        body {
-            background-color: #020202;
-            color: #F5D10D;
-            font-family: 'Open Sans', sans-serif;
-        }
-
-        .bodyContainer {
-        display:inline-flex;
-        width: 100%;
-        }
-
-        .movieCard {
-            border-left: 2px solid #ffc107;
-            border-top: 2px solid #ffc107;
-            border-radius: 5px;
-            width: 25%;
-            height: 700px;
-            background-color: #181818;
-            margin: 3%;
-            padding: 1%;
-            padding-bottom: unset;
-        }
-
-        .imageContainer {
-            width: 100%;
-            height: 55%;
-        }
-
-        .movieImage {
-            width: 100%;
-            height: 100%;
-            border-bottom-left-radius: 5px;
-            border-bottom-right-radius: 5px;
-        }
-
-        .titleContainer {
-            color: white;
-            font-weight: 600;
-            font-size: x-large;
-            border-bottom: 1px solid #ffc107;
-            margin: 5%;
-        }
-
-        .descriptionContainer {
-            margin: 2%;
-            text-align: justify;
-            padding: 3%;
-            color: white;
-            font-size: medium;
-            height: 28%;
-        }
-
-        .buttonContainer {
-            display: flex;
-            width: 100%;
-            justify-content: flex-end;
-            margin: 1%;
-            color: #ffc107;
-        }
-
-    .detailsImage {
-        width: 30%;
-        height: 40%;
-    }
-
-    .detailsPageContainer {
-        background-color: #181818;
-        width: 70%;
-        margin: 3%;
-        border-radius: 7px;
-        display: flex;
-        color: white;
-        height: 100%;
-    }
-
-    img {
-        width: 100%;
-        height: 100%;
-        border-radius: 7px;
-    }
-
-    .detailsTextContainer {
-        margin-left: 2%;
-    }
-
-    .detailsTitle {
-        font-size: 100px;
-        border-bottom: 5px solid #ffc107;
-        width: fit-content;
-    }
-
-    .detailsDescription {
-        margin-top: 2%;
-        width: 80%;
-    }
-
-    .detailsCast {
-        margin-top: 20px;
-    }
-
-    .commentContainer {
-     margin: 80px;
-     display:flex;
-     flex-flow:column;
-     flex-direction:column;
-    }
-
-    .commentWrap {
-     background-color: #181818;
-     border-radius: 5px;
-     padding: 7px;
-     width:fit-content;
-     margin-bottom: 5px;
-     margin-top: 30px;
-    }
-
-    .commentText{
-        color:whitesmoke;
-    }
-
-     .contentContainer {
-        width: 80%;
-        min-height: 900px;
-        display: flex;
-        flex-wrap: wrap;
-        margin-top: 2%;
-    }
-
-    .sideBarContainer {
-        width: 18%;
-        background-color: yellow;
-        height: 700px;
-        margin-top: 4.5%;
-        margin-right: 2%;
-        border-radius: 5px;
-        background-color: #181818;
-        padding: 1%;
-        padding-bottom: unset;
-        display:flex;
-        flex-direction:column;
-    }
-
-    .sideBarText{
-        color: #ffc107;
-        font-weight: 800;
-        margin: 5%;
-        font-size:medium;
-    }
-
-    .topMoviesShow {
-        height: 40%;
-        border-radius: 5px;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-    }
-
-    .movie {
-        border-bottom: 1px solid #ffc107;
-        padding: 5px;
-        margin: 1px;
-        width: 100%;
-        color:white;
-    }
-
-    </style>
 </head>
 <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-warning">
