--- a/MyMovies/MyMovies/Views/Shared/_Layout.cshtml
+++ b/MyMovies/MyMovies/Views/Shared/_Layout.cshtml
@@ -87,5 +87,8 @@
         </form>
     </nav>
     @RenderBody()
+    <footer>
+        @RenderSection("Scripts", required:false)
+    </footer>
 </body>
 </html>
