--- a/MyMovies/MyMovies/Views/Auth/SignIn.cshtml
+++ b/MyMovies/MyMovies/Views/Auth/SignIn.cshtml
@@ -15,7 +15,7 @@
 
     <div class="form-container">
         <form asp-controller="Auth" asp-action="SignIn" asp-route-returnUrl="@Context.Request.Query["returnUrl"]" method="post">
-            <div asp-validation-summary="All" class="text-danger"></div>
+            @*<div asp-validation-summary="All" class="text-danger"></div>*@
             <div class="form-group">
                 <label asp-for="Username" class="control-label">Username</label>
                 <input asp-for="Username" class="form-control" />
